--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 		<script type="text/javascript" src="./js/jquery.js"></script>
 	</head>
 	<body>
-		<h1>Nome indiano</h1>
+		<img src="img/logo.gif" width="300"/>
+		<br/>
 		<input type="button" id="play" onclick="top.location.href = 'index2.html'" name="go" value="play" />
 		<br/>
 		<div id="div_settings">
