--- a/index.html
+++ b/index.html
@@ -3,14 +3,17 @@
 	<head>
 		<script type="text/javascript" src="./js/funzioni.js"></script>
 		<script type="text/javascript" src="./js/jquery.js"></script>
+		<link rel="stylesheet" type="text/css" href="css/stile.css" />
 	</head>
 	<body>
 		<img src="img/logo.gif" width="300"/>
 		<br/>
-		<input type="button" id="play" onclick="top.location.href = 'index2.html'" name="go" value="play" />
+		<div id="div_play" >
+		<input type="button" class="button" id="play" onclick="top.location.href = 'index2.html'" name="go" value="play" />
+		</div>
 		<br/>
 		<div id="div_settings">
-			<input type="button" id="settings" onclick="set()" name="settings" value="settings" />
+			<input type="button" class="button" id="settings" onclick="set()" name="settings" value="settings" />
 		</div>
 	</body>
 </html>
